force-app/main/default/objects/RespostasAvaliacaoTutor__c/RespostasAvaliacaoTutor__c.object-meta.xml
<CustomObject>
    <label>Resposta da Avaliação</label>
    <nameField>
        <displayFormat>AVTR-{00000000}</displayFormat>
        <label>Código da Resposta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respostas da Avaliação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>