force-app/main/default/objects/RespostasAvaliacaoTutor__c/fields/AvaliacaoTutor__c.field-meta.xml
<CustomField>
    <fullName>AvaliacaoTutor__c</fullName>
    <label>Avaliação Tutor</label>
    <referenceTo>AvaliacaoTutor__c</referenceTo>
    <relationshipName>RespostasAvaliacoesTutores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>