force-app/main/default/objects/RespostasAvaliacaoTutor__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dimensao__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turmas</fullName>
            </value>
            <value>
                <fullName>Avaliações</fullName>
            </value>
            <value>
                <fullName>Reunião com famílias</fullName>
            </value>
            <value>
                <fullName>Formação</fullName>
            </value>
            <value>
                <fullName>Planejamento do semestre</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Preparação para o treino</fullName>
            </value>
            <value>
                <fullName>Condução do treino</fullName>
            </value>
            <value>
                <fullName>Amor</fullName>
            </value>
            <value>
                <fullName>Humildade</fullName>
            </value>
            <value>
                <fullName>Disciplina</fullName>
            </value>
            <value>
                <fullName>Coragem</fullName>
            </value>
            <value>
                <fullName>Espírito de equipe</fullName>
            </value>
            <value>
                <fullName>Superação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>