force-app/main/default/objects/RespostasAvaliacaoTutor__c/fields/Dimensao__c.field-meta.xml
<CustomField>
    <fullName>Dimensao__c</fullName>
    <label>Dimensão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gestão</fullName>
            </value>
            <value>
                <fullName>Pedagógica</fullName>
            </value>
            <value>
                <fullName>Atitudinal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>