force-app/main/default/objects/RespostasAvaliacaoTutor__c/fields/Indicador__c.field-meta.xml
<CustomField>
    <fullName>Indicador__c</fullName>
    <label>Indicador</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Turmas</fullName>
            </value>
            <value>
                <fullName>alunos/turmas</fullName>
            </value>
            <value>
                <fullName>Cadastro alunos</fullName>
            </value>
            <value>
                <fullName>Controle de frequência</fullName>
            </value>
            <value>
                <fullName>Aval esportiva</fullName>
            </value>
            <value>
                <fullName>Aval socioemocional</fullName>
            </value>
            <value>
                <fullName>Notas</fullName>
            </value>
            <value>
                <fullName>Aprovação</fullName>
            </value>
            <value>
                <fullName>Reunião famílias</fullName>
            </value>
            <value>
                <fullName>Tarefas curso</fullName>
            </value>
            <value>
                <fullName>Presença encontro</fullName>
            </value>
            <value>
                <fullName>Planejamento sem</fullName>
            </value>
            <value>
                <fullName>Passaporte</fullName>
            </value>
            <value>
                <fullName>Super Festival</fullName>
            </value>
            <value>
                <fullName>Festival Superação</fullName>
            </value>
            <value>
                <fullName>Preparação espaço</fullName>
            </value>
            <value>
                <fullName>Planejamento prévio</fullName>
            </value>
            <value>
                <fullName>Aprendizagem socioemocional</fullName>
            </value>
            <value>
                <fullName>Estratégias do DNA</fullName>
            </value>
            <value>
                <fullName>Ambiente positivo</fullName>
            </value>
            <value>
                <fullName>Autoconfiança</fullName>
            </value>
            <value>
                <fullName>Empatia</fullName>
            </value>
            <value>
                <fullName>Honestidade</fullName>
            </value>
            <value>
                <fullName>Respeito</fullName>
            </value>
            <value>
                <fullName>Autonomia</fullName>
            </value>
            <value>
                <fullName>Responsabilidade</fullName>
            </value>
            <value>
                <fullName>Autocontrole</fullName>
            </value>
            <value>
                <fullName>Tomada de Decisão</fullName>
            </value>
            <value>
                <fullName>Cooperação</fullName>
            </value>
            <value>
                <fullName>Comunicação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>