force-app/main/default/objects/RespostasAvaliacaoTutor__c/fields/Parametros__c.field-meta.xml
<CustomField>
    <fullName>Parametros__c</fullName>
    <label>Parâmetros</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Indicador__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>0 a 15</fullName>
            </value>
            <value>
                <fullName>16 a 25</fullName>
            </value>
            <value>
                <fullName>26 a 39</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
            <value>
                <fullName>até 40%</fullName>
            </value>
            <value>
                <fullName>41 a 70%</fullName>
            </value>
            <value>
                <fullName>71 a 99%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>Não entregou nenhuma</fullName>
            </value>
            <value>
                <fullName>Entregou todas em atraso</fullName>
            </value>
            <value>
                <fullName>Entregou todas no prazo</fullName>
            </value>
            <value>
                <fullName>Não executou</fullName>
            </value>
            <value>
                <fullName>Executou em atraso</fullName>
            </value>
            <value>
                <fullName>Executou no prazo</fullName>
            </value>
            <value>
                <fullName>Nunca</fullName>
            </value>
            <value>
                <fullName>Às vezes</fullName>
            </value>
            <value>
                <fullName>Frequentemente</fullName>
            </value>
            <value>
                <fullName>Sempre</fullName>
            </value>
            <value>
                <fullName>Entregou parcialmente</fullName>
            </value>
            <value>
                <fullName>Não preenchido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>