force-app/main/default/objects/RespostasAvaliacaoTutor__c/fields/ValorResposta__c.field-meta.xml
<CustomField>
    <fullName>ValorResposta__c</fullName>
    <label>Valor da resposta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>